--- a/render.yaml
+++ b/render.yaml
@@ -8,3 +8,5 @@ services:
     envVars:
       - key: GEMINI_API_KEY
         sync: false
+      - key: GEMINI_MODEL
+        value: gemini-2.5-flash-lite
